Removed JBang directives from APIUser.java