@@ -1,5 +1,7 @@
 jbang run \
    --java 21 \
+   --runtime-option -Xmx512m \
+   --runtime-option -XX:+UseZGC \
    --files logback.xml \
    --deps io.github.wfouche.tulip:tulip-runtime:2.2.3 \
    -m io.github.wfouche.tulip.api.TulipApi \
